--- a/css/component.css
+++ b/css/component.css
@@ -59,6 +59,58 @@
   background: linear-gradient(60deg,#4e4f95,#c87db4);
   opacity: 0.6;
 }
+
+/* lean-bg */
+.lean-bg--top:before,
+.lean-bg--bottom:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 180px;
+  background-color: #fefefe;
+}
+
+@media (max-width: 768px){
+  .lean-bg--top:before,
+  .lean-bg--bottom:after{
+      height: 80px;
+  }
+}
+
+.lean-bg--top:before {
+  top: 0;
+  transform: skewY(-5deg) translateY(-50%);
+}
+
+.lean-bg--top {
+  margin-top: 160px;
+}
+
+@media (max-width: 768px){
+  .lean-bg--top {
+    margin-top: 160px;
+  }
+}
+
+.lean-bg--bottom:after {
+  bottom: 0;
+  transform: skewY(-5deg) translateY(50%);
+}
+
+.lean-bg--bottom {
+  margin-bottom: 80px;
+}
+
+@media (max-width: 768px){
+  .lean-bg--bottom {
+    margin-bottom: 80px;
+  }
+}
+
+.lean-bg--no-margin {
+  margin: 0;
+}
+
 /*---------------------------*/
 
 /* Btn
@@ -162,6 +214,10 @@
 .icon-btn .icon{
   display: block;
   text-align: center;
+  transition: all 0.3s
+}
+.icon-btn .icon:hover{
+  transform: translateY(-25%)
 }
 
 /* text btn */
@@ -678,7 +734,7 @@
 @media(max-width: 768px) {
   .work {
     padding-top: 40px;
-    padding-bottom: 40px;
+    padding-bottom: 80px;
   }
 }
 
@@ -743,12 +799,19 @@
 /*---------------------------*/
 
 
-/* $Work 
+/* $Contact 
 ---------------------*/
 .contact {
   padding-top: 80px;
   padding-bottom: 80px;
 }
+@media (max-width: 768px) {
+  .contact  {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+}
+
 
 /* form */
 
@@ -773,6 +836,10 @@
   color: #fefefe;
 }
 
+.form textarea{
+  resize: none;
+}
+
 .form input[type="text"]:focus,
 .form input[type="tel"]:focus,
 .form input[type="email"]:focus,
@@ -786,5 +853,72 @@
   display: inline-block;
   vertical-align: middle;
   color: #fefefe;
+}
+
+.form__btn-group {
+  margin-top: 32px;
+}
+
+/* divide-text */
+
+.divide-text {
+  text-align: center;
+  margin-top: 80px;
+  margin-bottom: 80px;
+  font-size: 28px;
+  line-height: 32px;
+  color: #fefefe;
+}
+
+/* info */
+
+.info {
+  text-align: center;
+}
+
+.info_email {
+  margin-bottom: 16px;
+}
+
+.info_email a {
+  color: #e881a7;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.info_phone {
+  margin-bottom: 16px;
+}
+
+.info_phone a {
+  color: #fefefe;
+  font-size: 24px;
+  font-weight: 400;
+} 
+
+.info__social-bar .icon-btn{
+  color: #e881a7
+}
+/*---------------------------*/
+
+/* $Footer 
+---------------------*/
+.footer {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.final-text {
+  text-align: center;
+  max-width: 600px;
+  margin-right: auto;
+  margin-left: auto;
+  color: #fefefe;
+}
+
+.copyright {
+  text-align: center;
+  color: #fefefe;
+  font-size: 14px;
 }
 /*---------------------------*/
