--- a/css/component.css
+++ b/css/component.css
@@ -487,12 +487,12 @@
   padding-bottom: 80px;
 }
 
-@media (max-width: 768px){
+/* @media (max-width: 768px){
   .hero {
     padding-top: 40px;
     padding-bottom: 40px;
   }
-}
+} */
 
 .quote__content {
   text-align: center;
