--- a/css/component.css
+++ b/css/component.css
@@ -302,7 +302,22 @@
   left: 0;
   width: 100%;
   z-index: 100;
+  transition: all 0.3s;
 }
+
+.header--colored {
+  background-color: #fefefe;
+  box-shadow: 0px 3px 5px rgb(0, 0, 0, 0.1);
+}
+
+.header--colored .menu-toggle span {
+  background-color: #e881a7;
+}
+
+.header--colored .navbar＿social-navbar .icon-btn {
+  color: #e881a7;
+}
+
 /*---------------------------*/
 
 /* Navbar 
@@ -391,6 +406,15 @@
   transition: all 0.3s;
   margin-right: -16px;
 }
+
+@media (max-width: 768px){
+  .popup-menu__close {
+    padding: 12px;
+    width: 56px;
+    height: 56px;
+  }
+}
+
 .popup-menu__close:hover{
   transform: rotate(180deg);
 }
@@ -423,6 +447,13 @@
 }
 .popup-menu__item:hover {
   color: #e881a7;
+}
+
+@media (max-width: 768px){
+  .popup-menu__item {
+    font-size: 24px;
+    line-height: 48px;
+  }
 }
 /*---------------------------*/
 /* $About 
@@ -922,3 +953,43 @@
   font-size: 14px;
 }
 /*---------------------------*/
+
+
+/* $parallax graphic 
+---------------------*/
+[class^="graphic_"] {
+  position: absolute;
+}
+
+@media (max-width: 768px){
+  [class^="graphic_"]{
+      transform: scale(0.5);
+  }
+}
+
+.graphic_001{top: 20%;left: 5%;}
+.graphic_002{bottom: 0%;left: 2%;}
+.graphic_003{top: -120%;right: 5%;}
+.graphic_004{top: -30%;right: 20%;}
+.graphic_005{bottom: 20%;left: 5%;}
+.graphic_006{bottom: 50%;left: -5%;}
+.graphic_007{top: -30%;right: -5%;}
+.graphic_008{top: 10%;right: 10%;}
+.graphic_009{bottom: 50%;left: 5%;}
+.graphic_010{bottom: -10%;right: 20%;}
+.graphic_011{top: 5%;left: -5%;}
+.graphic_012{top: 12%;left: 5%;}
+.graphic_013{top: 35%;right: 10%;}
+.graphic_014{top: 50%;left: 10%;}
+.graphic_015{top: 57%;left: 5%;}
+.graphic_016{top: 71%;right: 10%;}
+.graphic_017{top: 70%;right: 5%;}
+.graphic_018{top: 84%;left: 5%;}
+.graphic_019{top: 90%;left: 20%;}
+.graphic_020{top: 0%;right: 20%;}
+.graphic_021{top: 30%;left: 10%;}
+.graphic_022{top: 35%;left: 10%;}
+.graphic_023{top: 87%;right: 15%;}
+.graphic_024{top: 70%;right: 10%;}
+/*---------------------------*/
+
