nodemailer fix fail

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -365,7 +365,7 @@
           <input type="text" name="username" id="username">
           <div class="row">
             <div class="col-sm-6">
-              <label for="">Phone</label>
+              <label for="tel">Phone</label>
               <input type="tel" name="tel" id="tel">
             </div>
             <div class="col-sm-6">
