--- a/views/contactReview.ejs
+++ b/views/contactReview.ejs
@@ -3,11 +3,10 @@
 <head>
     <title>傳送成功
     </title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 <body>
     <h1>傳送成功</h1>
-    <a href="/">回到 聯絡我們</a>
+    <a href="/">回到首頁</a>
 </body>
 
 </html>
