add guideline on mywork

--- a/public/css/component.css
+++ b/public/css/component.css
@@ -27,8 +27,9 @@
 /* $Elements
 ---------------------------*/
 
+/*-------------------------*/
 /* background 
----------------------*/
+---------------------------*/
 .bg {
   position: fixed;
   top: 0;
@@ -114,11 +115,9 @@
   margin: 0;
 }
 
-/*---------------------------*/
-
+/*-------------------------*/
 /* Btn
 ---------------------------*/
-
 /* $icon normal */
 .btn {
   display: inline-block;
@@ -295,8 +294,7 @@
   background-position: center;
 }
 
-/*---------------------------*/
-
+/*-------------------------*/
 /* $Header
 ---------------------------*/
 .header {
@@ -321,10 +319,9 @@
   color: #e881a7;
 }
 
-/*---------------------------*/
-
+/*-------------------------*/
 /* Navbar 
----------------------*/
+---------------------------*/
 .navbar {
   /* height: 80px; */
   /* border: 1px solid #fff; */
@@ -458,9 +455,9 @@
     line-height: 48px;
   }
 }
-/*---------------------------*/
+/*-------------------------*/
 /* $About 
----------------------*/
+---------------------------*/
 .hero {
   padding-top: 20vh;
   padding-bottom: 20vh;
