--- a/views/experience.ejs
+++ b/views/experience.ejs
@@ -4,7 +4,7 @@
     <div class="timeline-card">
       <h4>Modern Web 2016</h4>
       <p class="timeline-card__text">
-        I have sent recommended letter to Modern Web Offical and access to the big Tech Summit
+        I have sent recommended letter to Modern Web Offical and access to the Big Tech Summit.
       </p>
     </div>
   </div>
