--- a/public/css/base.css
+++ b/public/css/base.css
@@ -501,7 +501,7 @@ template {
 ---------------------------*/
 /* Globel */
 body,html{
-  font-family: 'Helvetica', 'roboto', arial,"微軟正黑體", sans-serif;
+  font-family: 'Helvetica', "Noto Sans TC", 'roboto', arial, "微軟正黑體", sans-serif;
 }
 /* heading */
 h1,h2,h3,h4,h5,h6{
@@ -511,21 +511,21 @@ h1,h2,h3,h4,h5,h6{
 h1{
   font-size: 80px;
   font-weight: 800;
-  font-family: 'Helvetica', 'roboto', arial, sans-serif;
+  font-family: 'Raleway','Helvetica', "Noto Sans TC", 'roboto', arial, sans-serif;
   margin-top: 24px;
   margin-bottom: 24px;
 }
 h2{
   font-size: 48px;
   font-weight: 600;
-  font-family: 'Helvetica', 'roboto', arial, sans-serif;
+  font-family: 'Raleway','Helvetica', "Noto Sans TC", 'roboto', arial, sans-serif;
   margin-top: 24px;
   margin-bottom: 24px;
 }
 h3{
   font-size: 40px;
   font-weight: 600;
-  font-family: 'Helvetica', 'roboto', arial, sans-serif;
+  font-family: 'Raleway','Helvetica', "Noto Sans TC", 'roboto', arial, sans-serif;
   line-height: 48px;
   margin-top: 24px;
   margin-bottom: 24px;
@@ -533,7 +533,7 @@ h3{
 h4{
   font-size: 24px;
   font-weight: 600;
-  font-family: 'Helvetica', 'roboto', arial, sans-serif;
+  font-family: 'Raleway','Helvetica', "Noto Sans TC", 'roboto', arial, sans-serif;
   line-height: 32px;
   margin-top: 24px;
   margin-bottom: 24px;
@@ -541,7 +541,7 @@ h4{
 h5{
   font-size: 20px;
   font-weight: 400;
-  font-family: 'Helvetica', 'roboto', arial, sans-serif;
+  font-family: 'Raleway','Helvetica', "Noto Sans TC", 'roboto', arial, sans-serif;
   line-height: 1;
   margin-top: 24px;
   margin-bottom: 16px;
@@ -549,7 +549,7 @@ h5{
 h6{
   font-size: 18px;
   font-weight: 400;
-  font-family: 'Helvetica', 'roboto', arial, sans-serif;
+  font-family: 'Raleway','Helvetica', "Noto Sans TC", 'roboto', arial, sans-serif;
   line-height: 32px;
   margin-top: 24px;
   margin-bottom: 16px;
@@ -557,7 +557,7 @@ h6{
 p{
   font-size: 16px;
   font-weight: 400;
-  font-family: 'Helvetica', 'roboto', arial, sans-serif;
+  font-family: 'Raleway','Helvetica', "Noto Sans TC", 'roboto', arial, sans-serif;
   line-height: 32px;
   letter-spacing: 0;
   margin-bottom: 16px;
@@ -565,7 +565,7 @@ p{
 .subtitle{
   font-size: 48px;
   font-weight: 900;
-  font-family: 'Raleway','Helvetica', 'roboto', arial, sans-serif;
+  font-family: 'Raleway','Helvetica', "Noto Sans TC", 'roboto', arial, sans-serif;
   margin-top: 24px;
   margin-bottom: 24px;
 }
