--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <html lang="zh-TW">
 <head>
   <meta charset="UTF-8">
-  <title>Alan's resume</title>
+  <title>Alan's CV</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalabel=0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" type="image/x-icon" href="image/favicon.ico" />
