--- a/views/hamburger.ejs
+++ b/views/hamburger.ejs
@@ -4,21 +4,21 @@
     <span></span>
     <span></span>
   </a>
-    <div id="popup-overlay" class="popup-menu">
-      <div class="container">
-        <div class="u-clearfix">
-          <a href="" class="popup-menu__close">
-            <span></span>
-            <span></span>                
-          </a>
-        </div>
-        <ul>
-          <li><a href="#about" class="popup-menu__item">ABOUT</a></li>
-          <li><a href="#skill" class="popup-menu__item">SKILL</a></li>
-          <li><a href="#experience" class="popup-menu__item">EXPERINCE</a></li>
-          <li><a href="#work" class="popup-menu__item">MY WORK</a></li>
-          <li><a href="#contact" class="popup-menu__item">CONTENT</a></li>
-        </ul>
+  <div id="popup-overlay" class="popup-menu">
+    <div class="container">
+      <div class="u-clearfix">
+        <a href="#!" class="popup-menu__close">
+          <span></span>
+          <span></span>                
+        </a>
       </div>
+      <ul>
+        <li><a href="#about" class="popup-menu__item">ABOUT</a></li>
+        <li><a href="#skill" class="popup-menu__item">SKILL</a></li>
+        <li><a href="#experience" class="popup-menu__item">EXPERINCE</a></li>
+        <li><a href="#work" class="popup-menu__item">MY WORK</a></li>
+        <li><a href="#contact" class="popup-menu__item">CONTENT</a></li>
+      </ul>
     </div>
+  </div>
 </div>
