--- a/views/mywork.ejs
+++ b/views/mywork.ejs
@@ -42,18 +42,18 @@
   <div class="row">
     <div class="col-sm-6 col-sm-push-6">
       <div class="imgbox">
-        <a href="image/works/work003.png" class="" data-fancybox="group">
+        <a href="image/works/work006.png" class="" data-fancybox="group">
           <div class="imgbox__inner imgbox__inner--4-3">
-            <div class="image" style="background-image: url('image/works/thumbnail/work003_thumb.png');"></div>
+            <div class="image" style="background-image: url('image/works/thumbnail/work006_thumb.png');"></div>
           </div>
         </a>
       </div>
     </div>
     <div class="col-sm-4 col-sm-pull-5">
       <div class="work-item__text">
-        <h3 class="work-item__title work-item__title--right">Do your best resume - Ms14thCamp</h3>
-        <p class="work-item__intro">接手微軟實習計畫領袖營的APP專案，要製作抽房間系統與RPG遊戲計分板，其中我負責前端介面排版製作與設計，在活動中也深入了解版本管控與合作專案。</p>
-        <a href="https://github.com/PSheon/MS14Camp" target="_blank" class="text-btn text-btn--primary text-btn--lg">Show project</a>
+        <h3 class="work-item__title work-item__title--right">Guideline for Alan's CV - Guideline</h3>
+        <p class="work-item__intro">使用BEM與OOCSS規範，並製作一份Guideline，裡面針對 Alan's CV 的顏色、字型、ICONS、LAYOUT、UI ELEMENTS...等去做設計規範。</p>
+        <a href="ttps://github.com/ChaoTzuJung/guideline_CV" target="_blank" class="text-btn text-btn--primary text-btn--lg">Show project</a>
       </div>
     </div>
   </div>
@@ -98,23 +98,3 @@
     </div>
   </div>
 </div>
-<div class="work-item wow fadeInUp">
-  <div class="row">
-    <div class="col-sm-6 col-sm-push-1">
-      <div class="imgbox">
-        <a href="image/works/work006.png" class="" data-fancybox="group">
-          <div class="imgbox__inner imgbox__inner--4-3">
-            <div class="image" style="background-image: url('image/works/thumbnail/work006_thumb.png');"></div>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-sm-4 col-sm-push-1">
-      <div class="work-item__text">
-        <h3 class="work-item__title">Guideline for Alan's CV - Guideline</h3>
-        <p class="work-item__intro">使用BEM與OOCSS規範，並製作一份Guideline，裡面針對 Alan's CV 的顏色、字型、ICONS、LAYOUT、UI ELEMENTS...等去做設計規範</p>
-        <a href="https://github.com/ChaoTzuJung/guideline_CV" target="_blank" class="text-btn text-btn--primary text-btn--lg">Show project</a>
-      </div>
-    </div>
-  </div>
-</div
