--- a/views/mywork.ejs
+++ b/views/mywork.ejs
@@ -53,7 +53,7 @@
       <div class="work-item__text">
         <h3 class="work-item__title work-item__title--right">Guideline for Alan's CV - Guideline</h3>
         <p class="work-item__intro">使用BEM與OOCSS規範，並製作一份Guideline，裡面針對 Alan's CV 的顏色、字型、ICONS、LAYOUT、UI ELEMENTS...等去做設計規範。</p>
-        <a href="ttps://github.com/ChaoTzuJung/guideline_CV" target="_blank" class="text-btn text-btn--primary text-btn--lg">Show project</a>
+        <a href="https://github.com/ChaoTzuJung/guideline_CV" target="_blank" class="text-btn text-btn--primary text-btn--lg">Show project</a>
       </div>
     </div>
   </div>
