--- a/public/css/component.css
+++ b/public/css/component.css
@@ -307,8 +307,8 @@
 }
 
 .header--colored {
-  background-color: #fefefe;
-  box-shadow: 0px 3px 5px rgb(0, 0, 0, 0.2);
+  background-color: #fff;
+  box-shadow: 0px 3px 5px rgb(0, 0, 0, 0.2) !important;
 }
 
 .header--colored .menu-toggle span {
