--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,13 +23,13 @@
       <div class="container">
         <div class="navbar navbar--collapse u-clearfix">
           <div class="social-bar navbar＿social-navbar">
-            <a href="https://www.facebook.com/profile.php?id=100009121597769" class="icon-btn">
+            <a target="_blank" href="https://www.facebook.com/profile.php?id=100009121597769" class="icon-btn">
               <i class="icon icon-facebook-official"></i>
             </a>
-            <a href="" class="icon-btn">
+            <a target="_blank" href="https://dribbble.com/s110319022" class="icon-btn">
               <i class="icon icon-dribbble"></i>
             </a>  
-            <a href="" class="icon-btn">
+            <a target="_blank" href="https://www.behance.net/s1103190223bf3" class="icon-btn">
               <i class="icon icon-behance"></i>
             </a>
           </div>
@@ -50,7 +50,7 @@
         <div class="container">
           <div class="hero__content wow bounceInLeft">
             <h1 class="hero__heading">HELLO<br>I'M ALAN</h1>
-            <a href="#" class="btn btn--primary btn--lg">Contact</a>
+            <a href="#contact" class="btn btn--primary btn--lg">Contact</a>
           </div>
         </div>
       </div>
@@ -140,14 +140,14 @@
             <a href="tel:0938379357">0938379357</a>
           </div>
           <div class="social-bar info__social-bar">
-            <a href="" class="icon-btn wow bounceIn" data-wow-delay="0.3s">
-              <i class="icon icon-twitter"></i>
+            <a href="https://twitter.com/s110319022" class="icon-btn wow bounceIn" data-wow-delay="0.3s">
+              <i target="_blank" class="icon icon-twitter"></i>
             </a>
-            <a href="" class="icon-btn wow bounceIn" data-wow-delay="0.6s">
-              <i class="icon icon-dribbble"></i>
+            <a href="https://dribbble.com/s110319022" class="icon-btn wow bounceIn" data-wow-delay="0.6s">
+              <i target="_blank" class="icon icon-dribbble"></i>
             </a>
             <a href="https://www.facebook.com/profile.php?id=100009121597769" class="icon-btn wow bounceIn" data-wow-delay="0.9s">
-              <i class="icon icon-facebook-official"></i>
+              <i target="_blank" class="icon icon-facebook-official"></i>
             </a>
           </div>
         </div>
