--- a/public/css/component.css
+++ b/public/css/component.css
@@ -308,7 +308,7 @@
 
 .header--colored {
   background-color: #fff;
-  box-shadow: 0px 3px 5px rgb(0, 0, 0, 0.2) !important;
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2) !important;
 }
 
 .header--colored .menu-toggle span {
