fix grammer mistake

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -67,7 +67,7 @@
                   <i class="icon-quote-right"></i>
                 </div>
                 <p class="quote__text">
-                  Hi, I'm Alan Chao, graduated from National Taipei University of Education with Department of Digital Technology Design. I'm a first-year graduate student in Master Program in Toy and Game Design in National Taipei University of Education and devote to Front-end development with Motion Graphic. 
+                  Hi, I'm Alan Chao, graduated from National Taipei University of Education with Department of Digital Technology Design. I'm a first-year graduate student in Master Program in Toy and Game Design in National Taipei University of Education and devote myself to Front-end development with Motion Graphic. 
                 </p>
                 <div class="quote__name">
                   <span>Alan Chao - </span>from NTUE_DTD
