--- a/views/skill.ejs
+++ b/views/skill.ejs
@@ -8,7 +8,7 @@
                         <h4 class="skill-card__title">
                         HTML
                         <p class="skill-card__text">
-                            I can hand on web development with HTML5, CSS3, ES6 and jQuery, deploying on heroku or github. In addition, used some of the HTML tag to achieve SEO.
+                            I can hand on web development with HTML5, CSS3, ES6 and jQuery, deploying on heroku or github. In addition, using some of the HTML tag to achieve SEO.
                         </p>
                         </h4>
                     </div>
@@ -23,7 +23,7 @@
                         <h4 class="skill-card__title">
                         CSS
                         <p class="skill-card__text">
-                            I have knew CSS animations, responsive design techniques, Flexbox and Grid layouts, Sass, CSS architecture BEM and OOCSS, framework of Bootstrape 4 and materialUI.
+                            I have known CSS animations, responsive design techniques, Flexbox and Grid layouts, Sass, CSS architecture BEM and OOCSS, framework of Bootstrape 4 and materialUI.
                         </p>
                         </h4>
                     </div>
@@ -55,7 +55,7 @@
                         <h4 class="skill-card__title">
                         NODEJS
                         <p class="skill-card__text">
-                            I have ever build a complete chat app with private and group chat functionalities using NodeJS, SocketIO, MongoDB, Express, EJS.
+                            I have ever built a complete chat app in private and with group chat functionalities using NodeJS, SocketIO, MongoDB, Express, EJS.
                         </p>
                         </h4>
                     </div>
